--- a/Assignment/AIMLCEP_Q1.ipynb
+++ b/Assignment/AIMLCEP_Q1.ipynb
@@ -30,10 +30,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "JZgcnaqX-q1W"
+      },
+      "source": [
+        "## $\n",
+        "{\\text{(a) [C] Find optimal } \\beta \\text{ by setting λ = 0. Let the optimal β be called } \\beta_0^* }\n",
+        "$\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "49XDDPG96YBS"
       },
       "source": [
-        "## $\\Large{\\text{Solution for Q1 (Linear Regression using OLSR)}}$"
+        "**Linear Regression using OLSR**"
       ]
     },
     {
@@ -593,182 +604,6 @@
       },
       "source": [
         "We see some mixed trend in most of the plots."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dnscBvZxkSos"
-      },
-      "source": [
-        "$\\large{\\text{Linear relationship between }} \\mathbf{x} \\text{ and } y \\text{ captured by a plane}$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cEhKyzh0xka9"
-      },
-      "source": [
-        "$\\Large{\\text{Probabilistic interpretation}}$ \n",
-        "\n",
-        "In probability terms, let us assume that $Y \\in {\\mathbb{R}}$ denotes the response random variable and $X \\in {\\mathbb{R}}^d$ denotes the predictor random variable in $d$ dimensions. \n",
-        "\n",
-        "Then we assume that the expected value of $Y$ given some observation of $X=(x_1,x_2,\\ldots,x_d)$ is represented as: \n",
-        "\n",
-        "$\n",
-        "E[Y|X=(x_1,x_2,\\ldots,x_d)] =  \\beta_0 + \\beta_1 x_1 + \\beta_2 x_2 + \\ldots + \\beta_d x_d.\n",
-        "$.\n",
-        "\n",
-        "This can be equivalenty represented as:\n",
-        "\n",
-        "$\n",
-        "E[Y|X=(x_1,x_2,\\ldots,x_d)] =  \\beta_0  + \\sum_{j=1}^{d} \\beta_j x_j.\n",
-        "$.\n",
-        "\n",
-        "However when we observe a data point $({\\mathbf{x}}^i, y^i)$ as a realization of the pair $(X,Y)$, where $\\mathbf{x}^i=(x^i_1,x^i_2,\\ldots,x^i_d)$, it is possible that the observed value $y^i$ of the response random variable $Y$ is not necessarily equal to the expected value $E[Y|X=\\mathbf{x}^i]= \\beta_0 + \\sum_{j=1}^{d} \\beta_j x^i_j$. \n",
-        "\n",
-        "In such case, we assume that the discrepancy between the observed value $y^i$ and the expected value $E[Y|X=\\mathbf{x}^i]$ is captured by an error $e^i$ given by:\n",
-        "\n",
-        "$\n",
-        "\\begin{align}\n",
-        "e^i &= y^i - E[Y|X=\\mathbf{x}^i] \\\\\n",
-        "\\implies e^i&= y^i - (\\beta_0 + \\sum_{j=1}^{d} \\beta_j x^i_j). \n",
-        "\\end{align}\n",
-        "$ \n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-llAzYjwwOER"
-      },
-      "source": [
-        "Now we can assume that the data set $D$ comprises multiple realizations of the random variable pair $(X,Y)$. \n",
-        "\n",
-        "Thus when we the data set $D$ contains $n$ observations of the form $\\{(\\mathbf{x}^1,y^1), (\\mathbf{x}^2,y^2), \\ldots, (\\mathbf{x}^n,y^n)\\}$, then we can compute the errors as:\n",
-        "$\\begin{align}\n",
-        "e^i = y^i - (\\beta_0 + \\sum_{j=1}^{d} \\beta_j x^i_j), \\forall i \\in \\{1,2,\\ldots,n\\}.\n",
-        "\\end{align}\n",
-        "$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZclIdQfP2H1D"
-      },
-      "source": [
-        "$\\large{\\text{How to estimate the parameters } \\beta_j, j=0,1,\\ldots,d?}$ \n",
-        "\n",
-        "One way to estimate the values of $\\beta_j, j=0,1,\\ldots,d$ is by minimizing the sum of squared errors given by: \n",
-        "$\n",
-        "\\begin{align}\n",
-        "\\min \\sum_{i=1}^{n} (e^i)^2 \n",
-        "\\end{align}\n",
-        "$\n",
-        "which can be equivalently written as the following optimization problem:\n",
-        "$\n",
-        "\\begin{align}\n",
-        "\\min_{\\beta_0,\\beta_1,\\ldots,\\beta_d} \\sum_{i=1}^{n} [y^i - ( \\beta_0 + \\sum_{j=1}^{d} \\beta_j x_j^i) ]^2. \n",
-        "\\end{align}\n",
-        "$\n",
-        "\n",
-        "$\\textbf{Note}$ that in the high dimensional case as well, the optimization problem is called the ordinary least squares (OLS) problem, and the term $\\sum_{i=1}^{n} [y^i - ( \\beta_0 + \\sum_{j=1}^{d} \\beta_j x_j^i) ]^2$ is called the OLS objective function and we will denote the OLS objective by:\n",
-        "\n",
-        "$\n",
-        "\\begin{align}\n",
-        "L(\\beta_0, \\beta_1,\\ldots,\\beta_d) = \\sum_{i=1}^{n} [y^i - ( \\beta_0 + \\sum_{j=1}^{d} \\beta_j x_j^i) ]^2. \n",
-        "\\end{align}\n",
-        "$ "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bTscS5Nn22Vp"
-      },
-      "source": [
-        "$\\Large{\\text{Solving the OLS optimization problem}}:$\n",
-        "\n",
-        "Assuming the responses $y^1,y^2,\\ldots,y^n$ are present in a $n \\times 1$ matrix represented as:\n",
-        "\n",
-        "$\n",
-        "\\mathbf{y}=\\begin{bmatrix}\n",
-        "y^1 \\\\ y^2 \\\\ \\vdots \\\\ y^n\n",
-        "\\end{bmatrix}\n",
-        "$\n",
-        "\n",
-        "and the predictor variables $\\mathbf{x}^1,\\mathbf{x}^2,\\ldots,\\mathbf{x}^d$ are placed in a $n\\times (d+1)$ matrix represented as:\n",
-        "\n",
-        "$\n",
-        "\\mathbf{X}=\\begin{bmatrix}\n",
-        "\\leftarrow & \\mathbf{x}^1 & \\rightarrow & 1 \\\\\n",
-        "\\leftarrow & \\mathbf{x}^2 & \\rightarrow & 1 \\\\\n",
-        "\\leftarrow & \\ldots & \\rightarrow & 1  \\\\\n",
-        "\\leftarrow & \\mathbf{x}^n & \\rightarrow & 1 \\\\\n",
-        "\\end{bmatrix}\n",
-        "=\n",
-        "\\begin{bmatrix}\n",
-        "{x}_1^1 & {x}_2^1 &\\ldots & {x}_d^1 & 1 \\\\\n",
-        "{x}_1^2 & {x}_2^2 &\\ldots & {x}_d^2 & 1 \\\\\n",
-        "\\vdots & \\vdots & \\ldots & \\vdots \\\\\n",
-        "{x}_1^n & {x}_2^n &\\ldots & {x}_d^n & 1 \n",
-        "\\end{bmatrix}\n",
-        "$\n",
-        "where note that the last column of matrix $\\mathbf{X}$ contains a column of all ones. This column is useful to incorporate the effect of $\\beta_0$ parameter in $\\mathbf{X}$ matrix. \n",
-        "\n",
-        "Similarly assume that \n",
-        " we can write the coefficients $\\beta_0,\\beta_1,\\ldots,\\beta_d$ as a $(d+1)\\times 1$ matrix represented as:\n",
-        "\n",
-        "$\n",
-        "\\mathbf{\\beta} = \\begin{bmatrix}\n",
-        "\\beta_1 \\\\ \\beta_2 \\\\ \\vdots \\\\ \\beta_d \\\\ \\beta_0\n",
-        "\\end{bmatrix}.\n",
-        "$\n",
-        "\n",
-        "Now we can write the objective function as:\n",
-        "\n",
-        "$\n",
-        "L(\\beta) = \\|\\mathbf{y} - \\mathbf{X}\\mathbf{\\beta} \\|_F^2.\n",
-        "$\n",
-        "\n",
-        "To solve \n",
-        "\n",
-        "$\n",
-        "\\min_\\beta L(\\beta) = \\|\\mathbf{y} - \\mathbf{X}\\mathbf{\\beta} \\|_F^2, \n",
-        "$\n",
-        "we find the gradient with respect to $\\beta$ and equate to zero. \n",
-        "\n",
-        "Thus we get:\n",
-        "\n",
-        "$\n",
-        "\\begin{align}\n",
-        "\\nabla_\\beta L(\\beta) &= \\mathbf{0} \\\\ \n",
-        "\\implies -\\mathbf{X}^\\top \\mathbf{y} + \\mathbf{X}^\\top\\mathbf{X} \\beta &= \\mathbf{0} \\\\ \n",
-        "\\implies \\beta &= (\\mathbf{X}^\\top\\mathbf{X})^{-1} \\mathbf{X}^\\top \\mathbf{y}. \n",
-        "\\end{align}\n",
-        "$\n",
-        "\n",
-        "Note that the closed form expression for $\\beta$ is valid only when $(\\mathbf{X}^\\top\\mathbf{X})^{-1}$ is invertible. Otherwise we need to solve the system given by:\n",
-        "\n",
-        "$\n",
-        "\\mathbf{X}^\\top\\mathbf{X} \\beta = \\mathbf{X}^\\top \\mathbf{y}\n",
-        "$\n",
-        "using a solver. \n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JZgcnaqX-q1W"
-      },
-      "source": [
-        "## $\n",
-        "{\\text{(a) [C] Find optimal } \\beta \\text{ by setting λ = 0. Let the optimal β be called } \\beta_0^* }\n",
-        "$\n"
       ]
     },
     {
@@ -1866,7 +1701,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 206
         },
         "id": "x9TdIh0AaKUV",
         "outputId": "a20e33d4-3b96-47bf-ee8a-0caeb75d53c9"
@@ -2053,7 +1888,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 206
         },
         "id": "zEBrg4Ktak2Z",
         "outputId": "895c5b53-5473-4dd5-ff72-be9f16349fa1"
@@ -2519,7 +2354,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 206
         },
         "id": "9b_3m7f6uOTi",
         "outputId": "210a0627-9a8b-4ba4-f7f2-f772212dd474"
@@ -2813,7 +2648,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 206
         },
         "id": "ZnpUeaVDyMqN",
         "outputId": "5be599e7-4cfe-4b75-bd5a-3feec419c9e5"
@@ -3034,7 +2869,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 81
         },
         "id": "X1N8k-cSytRv",
         "outputId": "823686ff-ee5f-4c2b-b439-40278948e455"
@@ -3189,7 +3024,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 295
         },
         "id": "7D1HiDOQyxva",
         "outputId": "0e42a38e-f8a7-43bc-fabc-6cedcc06be7f"
@@ -3219,7 +3054,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 49
         },
         "id": "5PmV_aPEy1zC",
         "outputId": "1deb1a80-a77b-46de-de9b-8bfe0bcfff38"
@@ -3370,7 +3205,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 206
         },
         "id": "5TlvucW4y8Lq",
         "outputId": "7f8d7dba-2c92-4947-8185-0d13fe23b966"
@@ -3554,7 +3389,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 408
         },
         "id": "7u9jHiUmzB2q",
         "outputId": "d8b70d5f-1eb2-4a05-9d48-a15050c90100"
@@ -3631,7 +3466,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 206
         },
         "id": "yXXLvJ_xzUR4",
         "outputId": "580c17a2-5aa3-4351-91c3-9968ef349105"
@@ -3902,7 +3737,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 405
         },
         "outputId": "c4a45eab-b010-4790-84c6-d146097329a1",
         "id": "-5g91z-U27kc"
@@ -4296,7 +4131,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 1000
         },
         "id": "JQNDjOVB3wCl",
         "outputId": "b4caea5f-2ac1-44e3-de8b-b007057df874"
@@ -4735,7 +4570,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 1000
         },
         "id": "3E_hEyFg3-NS",
         "outputId": "599814ef-6e8e-494c-9971-a2ec0831f9af"
@@ -5327,7 +5162,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 1000
         },
         "id": "pUvSelaV5H7x",
         "outputId": "f64cbeca-3064-4f33-abdc-e1855adc61fb"
@@ -5864,20 +5699,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Linear Regression with Regularizers**"
-      ],
-      "metadata": {
-        "id": "2LSLWvHR9wmi"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## (b) Choose $\\lambda \\in \\{10^{-3},10^{-2},0.1, 1, 10, 100, 1000\\}$ and for every possible value of λ do the following:\n",
         "let us check the condition number of $(X^\\top X+\\lambda I)$.\n"
       ],
       "metadata": {
         "id": "I2JDUZOd70oc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Linear Regression with Regularizers**"
+      ],
+      "metadata": {
+        "id": "2LSLWvHR9wmi"
       }
     },
     {
