--- a/Assignment/AIMLCEP_Q1.ipynb
+++ b/Assignment/AIMLCEP_Q1.ipynb
@@ -33,8 +33,7 @@
         "id": "JZgcnaqX-q1W"
       },
       "source": [
-        "##${\\text{(a) [C] Find optimal } \\beta \\text{ by setting λ = 0. Let the optimal β be called } \\beta_0^* }\n",
-        "$\n"
+        "## ${\\text{(a) [C] Find optimal } \\beta \\text{ by setting λ = 0. Let the optimal β be called } \\beta_0^* }$\n"
       ]
     },
     {
