--- a/Assignment/AIMLCEP_Q1.ipynb
+++ b/Assignment/AIMLCEP_Q1.ipynb
@@ -607,9 +607,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### $\n",
-        "\\text {   i. [C, R] Report the value of } \\beta_0^* \\text {and the RMSE and } R^2 \\text { values for train data set.}\n",
-        "$"
+        "###$\\text {   i. [C, R] Report the value of } \\beta_0^* \\text {and the RMSE and } R^2 \\text { values for train data set.}$"
       ],
       "metadata": {
         "id": "ZagKfhd_kxqz"
@@ -1673,9 +1671,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### $ \n",
-        "\\text{ii. [R, C] Justify with appropriate reasons if the response variable Weight_g in the training data set given in Q1 train.xlsx file can (or) cannot be modeled using a linear regression model identified by} \\beta_0^* \\text {. Using } \\beta_0^* \\text { , predict the Weight_g value for the test data set in Q1 test.xlsx file and report the predictions.}\n",
-        "$\n"
+        "###$\\text{ii. [R, C] Justify with appropriate reasons if the response variable Weight_g in the training data set given in Q1 train.xlsx file can (or) cannot be modeled using a linear regression model identified by} \\beta_0^* \\text {. Using } \\beta_0^* \\text { , predict the Weight_g value for the test data set in Q1 test.xlsx file and report the predictions.}$\n"
       ],
       "metadata": {
         "id": "qPkxnX9xYcny"
@@ -2609,10 +2605,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### $\n",
-        "\\text {iii. [C, R] From the components of }\\beta_0^* \\text{, can you compare the relative significance of the predictor variables and identify two most significant attributes? Using only the two most signicant attributes, solve the OLSR problem and report the RMSE and } R^2 \\text { values for train data set. Explain using your results if the less significant attributes can be removed from\n",
-        "the data set altogether.}\n",
-        "$"
+        "###$\\text {iii. [C, R] From the components of }\\beta_0^* \\text{, can you compare the relative significance of the predictor variables and identify two most significant attributes? Using only the two most signicant attributes, solve the OLSR problem and report the RMSE and } R^2 \\text { values for train data set. Explain using your results if the less significant attributes can be removed from the data set altogether.}$"
       ],
       "metadata": {
         "id": "6zvs0TA8nhQ6"
