--- a/Assignment/AIMLCEP_ARVIND_MAURYA_Q2.ipynb
+++ b/Assignment/AIMLCEP_ARVIND_MAURYA_Q2.ipynb
@@ -4091,6 +4091,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Implement Naive bayes on reduced feature train and test data**"
+      ],
+      "metadata": {
+        "id": "PYlPcuy9OOnp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Analysis of the heat map suggest that not all column are correlated to each except num_char and line_breaks.\n",
         "Since Naive Bayes assume that feature(x varibale column) should not be correlated. So we are just dropping the correlated column to check if model give better performance."
       ],
@@ -4437,7 +4446,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Implement logistic Regression using class balance data**"
+        "**Implement logistic Regression using class balance dataset**"
       ],
       "metadata": {
         "id": "aL2ZhrRhNkdC"
@@ -4461,9 +4470,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hqATsDgs1YCo",
-        "outputId": "7a3679a5-3da1-4283-d5b5-4eb01fced0f7"
+        "outputId": "457b1551-1f6a-45d5-d4c1-b4c8ad312473"
       },
-      "execution_count": 240,
+      "execution_count": 242,
       "outputs": [
         {
           "output_type": "stream",
@@ -4489,14 +4498,14 @@
         "plot_confusion_matrix(y_train_smote,y_train_predictions_bal_lrm,y_test_smote, y_test_predictions_bal_lrm )"
       ],
       "metadata": {
-        "id": "2BWqaGBWMkpz",
-        "outputId": "5b0e9289-ded6-41fb-e949-497142b4f542",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 771
-        }
+        },
+        "id": "2BWqaGBWMkpz",
+        "outputId": "644016e3-44f5-437c-8ff3-28b5b23a8b8d"
       },
-      "execution_count": 241,
+      "execution_count": 243,
       "outputs": [
         {
           "output_type": "stream",
