--- a/Assignment/AIMLCEP_ARVIND_MAURYA_Q3.ipynb
+++ b/Assignment/AIMLCEP_ARVIND_MAURYA_Q3.ipynb
@@ -2032,6 +2032,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## **Q3.C Train a CNN**"
+      ],
+      "metadata": {
+        "id": "il388W8yKpcv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "3 (c) [C, R] Now consider that each data point represented in vector form can be represented as a\n",
         "p \u0002 p matrix for a suitable p. Using this transformed train data, build a convolution neural\n",
         "network (CNN) with 3 convolution cum max-pool blocks (where max-pool follows a convolu-\n",
@@ -3592,11 +3601,11 @@
         "y_train_predict_cnn"
       ],
       "metadata": {
-        "id": "6fK-Yrv2H8aO",
-        "outputId": "d58ceecc-0483-4e8b-a52f-5bf2a9b9a789",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6fK-Yrv2H8aO",
+        "outputId": "d58ceecc-0483-4e8b-a52f-5bf2a9b9a789"
       },
       "execution_count": 172,
       "outputs": [
@@ -3621,11 +3630,11 @@
         "y_test_predict_cnn"
       ],
       "metadata": {
-        "id": "z6_8z89sJKvZ",
-        "outputId": "72bec113-ce20-4779-f729-b8b8b7682a81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "z6_8z89sJKvZ",
+        "outputId": "72bec113-ce20-4779-f729-b8b8b7682a81"
       },
       "execution_count": 173,
       "outputs": [
@@ -3649,12 +3658,12 @@
         "plot_confusion_matrix(y_train,y_train_predict,y_test,y_test_predict)"
       ],
       "metadata": {
-        "id": "qNgDJe56JUdw",
-        "outputId": "1fc98d97-e10d-4ed7-f7a2-f9f27e437d98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 909
-        }
+        },
+        "id": "qNgDJe56JUdw",
+        "outputId": "1fc98d97-e10d-4ed7-f7a2-f9f27e437d98"
       },
       "execution_count": 175,
       "outputs": [
