--- a/Assignment/AIMLCEP_ARVIND_MAURYA_Q2.ipynb
+++ b/Assignment/AIMLCEP_ARVIND_MAURYA_Q2.ipynb
@@ -3929,11 +3929,11 @@
         "print(nbModel_grid.best_estimator_)"
       ],
       "metadata": {
-        "id": "K-2P6V5-7CHS",
-        "outputId": "fd2eeed3-90be-400e-d565-4c1aae0da073",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K-2P6V5-7CHS",
+        "outputId": "fd2eeed3-90be-400e-d565-4c1aae0da073"
       },
       "execution_count": 408,
       "outputs": [
@@ -4432,11 +4432,11 @@
         "print ('Best C value = ', best_c_value)"
       ],
       "metadata": {
-        "id": "wTiOqkC0-vse",
-        "outputId": "9b0edf67-7d7f-4e51-ce49-9b65313c7e7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wTiOqkC0-vse",
+        "outputId": "9b0edf67-7d7f-4e51-ce49-9b65313c7e7f"
       },
       "execution_count": 416,
       "outputs": [
@@ -4747,11 +4747,11 @@
         "print ('Best C value = ', best_c_value)"
       ],
       "metadata": {
-        "id": "luzSbdqQFGLI",
-        "outputId": "1e02edcc-c7c2-4c5c-b833-9de522701972",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "luzSbdqQFGLI",
+        "outputId": "1e02edcc-c7c2-4c5c-b833-9de522701972"
       },
       "execution_count": 422,
       "outputs": [
@@ -7109,25 +7109,25 @@
         "\n",
         "y_train_predicted_nb_norm = nb_model.predict(X_train_norm)\n",
         "y_test_predicted_nb_norm = nb_model.predict(X_test_norm)\n",
-        "print_bold('Naive Bayes Classifier statistics with Class Balanced Dataset:')\n",
+        "print_bold('Naive Bayes Classifier statistics with Class Balanced Dataset and Normalization:')\n",
         "print_classification_report(y_train_norm,y_train_predicted_nb_norm , y_test_norm, y_test_predicted_nb_norm)\n",
         "plot_confusion_matrix(y_train_norm,y_train_predicted_nb_norm , y_test_norm, y_test_predicted_nb_norm)"
       ],
       "metadata": {
         "id": "PizUN_LZ53nQ",
-        "outputId": "83e3575f-5aa2-4807-f317-45fcd4be9bb5",
+        "outputId": "be75f1e6-80f2-40b2-c694-83b52091587b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 798
         }
       },
-      "execution_count": 454,
+      "execution_count": 477,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m\u001b[95mNaive Bayes Classifier statistics with Class Balanced Dataset: \n",
+            "\u001b[1m\u001b[95mNaive Bayes Classifier statistics with Class Balanced Dataset and Normalization: \n",
             "\u001b[0m\n",
             "\u001b[1m======================================================\u001b[0m\n",
             "\u001b[1m\u001b[36m\u001b[4mTrain Classification Report:\u001b[0m\n",
