--- a/Idly_Analysis.ipynb
+++ b/Idly_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIcR53yQmolNwBXs4sAssY",
+      "authorship_tag": "ABX9TyOqUhk3bS05l8coLncc4ySl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/arvind-maurya/MachineLearning/blob/master/Idly_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note: Most of the code and defination is taken from internet"
+      ],
+      "metadata": {
+        "id": "axAvGchSIG4y"
+      }
     },
     {
       "cell_type": "code",
