--- a/Idly_Analysis.ipynb
+++ b/Idly_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqUhk3bS05l8coLncc4ySl",
+      "authorship_tag": "ABX9TyNFgek/2sR9Hp0lgRE+vu75",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,13 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Arind Maurya , Dr Amitkumar Khatu,\n",
+        "\n",
+        "Pune- Pimpri Centre\n",
+        "\n",
+        "We thought to do this regression analysis of one of the breakfast item using ML as assignment\n",
+        "\n",
+        "\n",
         "Note: Most of the code and defination is taken from internet"
       ],
       "metadata": {
