--- a/Idly_Analysis.ipynb
+++ b/Idly_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFgek/2sR9Hp0lgRE+vu75",
+      "authorship_tag": "ABX9TyPeod6gyNamu9c9gdipawJ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "A90Ua3HoGZLq"
       },
@@ -75,9 +75,9 @@
           "height": 206
         },
         "id": "PdxQlaNoKCUn",
-        "outputId": "dbc75fd2-52cf-46c0-d305-20ad29720080"
+        "outputId": "40ccb426-a6e8-4ecc-960a-4a246ba4ad46"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,7 +92,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ed8b0ebb-15ca-420a-a238-6b9a2f98601f\">\n",
+              "  <div id=\"df-6f5af583-6169-4b2f-b88b-82ef465cea14\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -163,7 +163,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed8b0ebb-15ca-420a-a238-6b9a2f98601f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6f5af583-6169-4b2f-b88b-82ef465cea14')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -214,12 +214,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ed8b0ebb-15ca-420a-a238-6b9a2f98601f button.colab-df-convert');\n",
+              "          document.querySelector('#df-6f5af583-6169-4b2f-b88b-82ef465cea14 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ed8b0ebb-15ca-420a-a238-6b9a2f98601f');\n",
+              "          const element = document.querySelector('#df-6f5af583-6169-4b2f-b88b-82ef465cea14');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -242,7 +242,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 16
         }
       ]
     },
@@ -257,9 +257,9 @@
           "height": 423
         },
         "id": "sRG_lTD-Kk_1",
-        "outputId": "1b7d1f58-9cb0-4d48-ebc9-72317701beef"
+        "outputId": "917de16e-f222-4b56-feb1-3b78f9e8f152"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4f0d6dff-8e9b-43b8-a224-234840c4f656\">\n",
+              "  <div id=\"df-bd3ae692-733d-4bb4-aa08-22d9125fb9d0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -402,7 +402,7 @@
               "</table>\n",
               "<p>115 rows × 5 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4f0d6dff-8e9b-43b8-a224-234840c4f656')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bd3ae692-733d-4bb4-aa08-22d9125fb9d0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -453,12 +453,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4f0d6dff-8e9b-43b8-a224-234840c4f656 button.colab-df-convert');\n",
+              "          document.querySelector('#df-bd3ae692-733d-4bb4-aa08-22d9125fb9d0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4f0d6dff-8e9b-43b8-a224-234840c4f656');\n",
+              "          const element = document.querySelector('#df-bd3ae692-733d-4bb4-aa08-22d9125fb9d0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -481,7 +481,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 17
         }
       ]
     },
@@ -525,9 +525,9 @@
           "height": 546
         },
         "id": "40GiMTuoKs5J",
-        "outputId": "a63956f4-613c-4d3a-bbc4-aa8c72e8b7af"
+        "outputId": "aefe6a16-389a-4333-e795-fd1f807da9b0"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -555,6 +555,7 @@
       "source": [
         "# Making dataset\n",
         "import pandas\n",
+        "import numpy as np\n",
         "\n",
         "\n",
         "df = pandas.read_excel(\"/content/Idly.xlsx\")\n",
@@ -566,7 +567,7 @@
       "metadata": {
         "id": "_z3HHGsqdS2N"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -579,7 +580,7 @@
       "metadata": {
         "id": "lhroTBN8ncL0"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -596,9 +597,9 @@
           "height": 74
         },
         "id": "uBNXF_DAqnA2",
-        "outputId": "cc5cbeb5-5334-4f86-8387-beff1d89b857"
+        "outputId": "44377496-b950-48dc-a29e-20b04fe302ac"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -611,7 +612,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 21
         }
       ]
     },
@@ -625,12 +626,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ZDhu7ND3rpQG",
-        "outputId": "70971c4f-c0f2-43be-92d3-64c3d8f726ca"
+        "outputId": "77586f89-8a59-44bd-88c5-e32681fd344c"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,7 +653,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 22
         }
       ]
     },
@@ -665,12 +667,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ASPgT3Eor1Pv",
-        "outputId": "5a08dbdf-19bf-4ea4-c77a-9e7d2ffc11f0"
+        "outputId": "c924762e-d790-4b77-952e-8df837d3ec8c"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,9 +702,9 @@
           "height": 206
         },
         "id": "qjwE4cstr6PO",
-        "outputId": "152e0cee-627f-4289-dca9-303759fa04eb"
+        "outputId": "abe8408c-4a5e-416e-d896-d5d76b3cc87f"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -716,7 +719,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-add94d24-a689-4330-809f-e01deab0944c\">\n",
+              "  <div id=\"df-bc889045-a771-4a42-aefd-a3c51cf3c9e5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -769,7 +772,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-add94d24-a689-4330-809f-e01deab0944c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bc889045-a771-4a42-aefd-a3c51cf3c9e5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -820,12 +823,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-add94d24-a689-4330-809f-e01deab0944c button.colab-df-convert');\n",
+              "          document.querySelector('#df-bc889045-a771-4a42-aefd-a3c51cf3c9e5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-add94d24-a689-4330-809f-e01deab0944c');\n",
+              "          const element = document.querySelector('#df-bc889045-a771-4a42-aefd-a3c51cf3c9e5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -848,7 +851,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 24
         }
       ]
     },
@@ -867,12 +870,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ci9asBUSsI9W",
-        "outputId": "51b2b036-bf0a-41fa-ca12-fd2d4c622469"
+        "outputId": "4973e97b-9379-4455-bbd0-97591ba92bcd"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
