--- a/Idly_Analysis.ipynb
+++ b/Idly_Analysis.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeod6gyNamu9c9gdipawJ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Arind Maurya , Dr Amitkumar Khatu,\n",
+        "Arvind Maurya , Dr Amitkumar Khatu,\n",
         "\n",
         "Pune- Pimpri Centre\n",
         "\n",
@@ -44,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "A90Ua3HoGZLq"
       },
@@ -77,7 +76,7 @@
         "id": "PdxQlaNoKCUn",
         "outputId": "40ccb426-a6e8-4ecc-960a-4a246ba4ad46"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,7 +258,7 @@
         "id": "sRG_lTD-Kk_1",
         "outputId": "917de16e-f222-4b56-feb1-3b78f9e8f152"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +526,7 @@
         "id": "40GiMTuoKs5J",
         "outputId": "aefe6a16-389a-4333-e795-fd1f807da9b0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -567,7 +566,7 @@
       "metadata": {
         "id": "_z3HHGsqdS2N"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -580,7 +579,7 @@
       "metadata": {
         "id": "lhroTBN8ncL0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -599,7 +598,7 @@
         "id": "uBNXF_DAqnA2",
         "outputId": "44377496-b950-48dc-a29e-20b04fe302ac"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,13 +625,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ZDhu7ND3rpQG",
         "outputId": "77586f89-8a59-44bd-88c5-e32681fd344c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,13 +665,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ASPgT3Eor1Pv",
         "outputId": "c924762e-d790-4b77-952e-8df837d3ec8c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +701,7 @@
         "id": "qjwE4cstr6PO",
         "outputId": "abe8408c-4a5e-416e-d896-d5d76b3cc87f"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -870,13 +867,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ci9asBUSsI9W",
         "outputId": "4973e97b-9379-4455-bbd0-97591ba92bcd"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
